--- a/src/mycv/scss/styles2.scss
+++ b/src/mycv/scss/styles2.scss
@@ -1,6 +1,38 @@
+$page-fonts: "Lato", sans-serif;
+$bold: bold;
+/* colors */
+$white: #fff;
 
-$page-fonts: 'Lato', sans-serif;
+body {
+  font-family: $page-fonts;
+}
 
-body{
-    font-family: $page-fonts;
+.page-navbar.navbar {
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+}
+
+.page-navbar .navbar-nav .nav-item a {
+  font-weight: $bold;
+  .navbar-nav {
+  }
+  .nav-item {
+  }
+  a {
+  }
+}
+
+.page-navbar.navbar-dark {
+  color: $white;
+  .navbar-nav {
+  }
+  .nav-link {
+  }
+}
+
+.page-navbar .logo {
+  font-size: 1.5rem;
+}
+
+.page-navbar.fixed-top + .page {
+  padding-top: 62px;
 }
