--- a/src/mycv/scss/stylecv.scss
+++ b/src/mycv/scss/stylecv.scss
@@ -1,11 +1,22 @@
+/* font stuff */
 $page-fonts: "Lato", sans-serif;
 $bold: bold;
 /* colors */
 $white: #fff;
+$whiteOff: #eee;
+$whiteOffTwo: #ddd;
 $pink: #ed36ad;
 $light-pink: #fb5ec4;
 $grad-start: #000428;
 $grad-end: #004e92;
+$educationPlaceLabelColor: #20c997;
+$timePeriod: #6c757d;
+$workPlaceLabelColor: #0ea0ff;
+$borderSolid: solid;
+$borderDotted: dotted;
+$contactIconColor: #c9c9c9;
+$footerLinkColor: #282b2b;
+$socialIconBGColor: #c5c9d2;
 
 body {
   font-family: $page-fonts;
@@ -65,6 +76,7 @@ body {
     margin: auto;
     .about-me {
       max-width: 800px;
+      margin: auto;
     }
     p {
       font-size: 1.5em;
@@ -88,50 +100,50 @@ body {
   &.info {
     padding-top: 70px;
     h2 {
-      font-weight: bold;
+      font-weight: $bold;
       margin-bottom: 70px;
     }
     h3 {
       font-size: 1.3rem;
     }
+    .education.group {
+      .organization {
+        background-color: $educationPlaceLabelColor;
+      }
+    }
+    .group:not(:first-child) {
+      margin-top: 90px;
+    }
     .group {
       max-width: 800px;
       margin: auto;
-      .group:not(:first-child) {
-        margin-top: 90px;
-      }
       .period {
         font-size: 0.8rem;
         float: none;
-        font-weight: bold;
+        font-weight: $bold;
         margin-top: 4px;
-        color: #6c757d;
+        color: $timePeriod;
         opacity: 0.8;
       }
       .organization {
         font-size: 0.85em;
-        background-color: #0ea0ff;
+        background-color: $workPlaceLabelColor;
         display: inline-block;
-        color: #fff;
+        color: $white;
         padding: 2px 8px;
         border-radius: 2em;
-      }
-      .education.group {
-        .organization {
-          background-color: #20c997;
-        }
       }
       .item {
         padding-bottom: 10px;
         margin-bottom: 25px;
-        border-bottom: 1px solid #eee;
+        border-bottom: 1px $borderDotted $whiteOff;
         .row {
           margin-bottom: 5px;
         }
       }
       h2 + .item {
         padding-top: 25px;
-        border-top: 1px solid #eee;
+        border-top: 1px $borderDotted $whiteOff;
       }
     }
     .work-experience {
@@ -143,6 +155,105 @@ body {
       h3 {
         font-weight: $bold;
       }
+    }
+    .hobbies {
+      p {
+        max-width: 700px;
+        margin: auto;
+        font-size: 1.2em;
+      }
+    }
+  }
+  .info-card {
+    padding: 40px;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.75);
+    height: 100%;
+    h2 {
+      margin-top: 0;
+      margin-bottom: 24px !important;
+      font-size: 1.4rem;
+    }
+    &.skills {
+      h3 {
+        margin-top: 25px;
+        font-size: 1rem;
+        font-weight: $bold;
+      }
+      .progress {
+        height: 3px;
+      }
+    }
+    &.contact-info {
+      .icon {
+        font-size: 1.3em;
+        color: $contactIconColor;
+        position: relative;
+        bottom: 4px;
+      }
+    }
+  }
+}
+
+.page-footer {
+  padding-top: 32px;
+  border-top: 1px $borderSolid $whiteOffTwo;
+  text-align: center;
+  padding-bottom: 20px;
+  a {
+    display: inline-block;
+    margin: 0px 10px;
+    color: $footerLinkColor;
+    font-size: 18px;
+  }
+  .links {
+    display: inline-block;
+  }
+  .social-icons {
+    margin-top: 20px;
+    margin-bottom: 16px;
+    a {
+      font-size: 18px;
+      margin: 0 3px;
+      color: $white;
+      border: 1px $borderSolid;
+      opacity: 0.75;
+      border-radius: 50%;
+      width: 36px;
+      display: inline-block;
+      height: 36px;
+      text-align: center;
+      background-color: $socialIconBGColor;
+      line-height: 34px;
+      &:hover {
+        opacity: 1;
+      }
+    }
+  }
+}
+
+@media (min-width: 768px) {
+  .cv-block {
+    padding-bottom: 120px;
+    padding-top: 120px;
+    &.info {
+      .group {
+        .period {
+          float: right;
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 576px) {
+  .navbar {
+    padding-top: 1.2rem;
+    padding-bottom: 1.2rem;
+  }
+
+  .portfolio-navbar {
+    &.fixed-top + .page {
+      padding-top: 6rem;
     }
   }
 }
