--- a/src/mycv/scss/stylecv.scss
+++ b/src/mycv/scss/stylecv.scss
@@ -2,6 +2,7 @@
 $page-fonts: "Lato", sans-serif;
 $bold: bold;
 /* colors */
+$black: #000;
 $white: #fff;
 $whiteOff: #eee;
 $whiteOffTwo: #ddd;
@@ -9,15 +10,17 @@ $pink: #ed36ad;
 $light-pink: #fb5ec4;
 $grad-start: #000428;
 $grad-end: #004e92;
-$educationPlaceLabelColor: #20c997;
 $timePeriod: #6c757d;
+$educationPlaceLabelColor: #20c997;
 $workPlaceLabelColor: #0ea0ff;
 $freelancePlaceLabelColor: #a00909;
-$borderSolid: solid;
-$borderDotted: dotted;
+$publicationsPlaceLabelColor: #555500;
 $contactIconColor: #c9c9c9;
 $footerLinkColor: #282b2b;
 $socialIconBGColor: #c5c9d2;
+/*border styles*/
+$borderSolid: solid;
+$borderDotted: dotted;
 
 body {
   font-family: $page-fonts;
@@ -70,6 +73,20 @@ body {
 }
 
 .cv-block {
+  .block-end {
+    padding-bottom: 10px;
+    padding-top: 10px;
+    text-align: center;
+    max-width: 850px;
+    margin: auto;
+    .btn {
+      padding: 0.375rem 1rem;
+      border-radius: 2em;
+    }
+  }
+}
+
+.cv-block {
   padding-bottom: 60px;
   padding-top: 60px;
   &.block-intro {
@@ -119,6 +136,16 @@ body {
       &.group {
         .organization {
           background-color: $freelancePlaceLabelColor;
+        }
+      }
+    }
+    .publications {
+      &.group {
+        h3 {
+        font-size: 1.1rem;
+        }
+        .organization {
+          background-color: $publicationsPlaceLabelColor;
         }
       }
     }
@@ -183,8 +210,14 @@ body {
       .icon {
         font-size: 1.3em;
         color: $contactIconColor;
-        position: relative;
         bottom: 4px;
+        padding-right: 8px;
+      }
+      .col-md-4 {
+        display: inline-block;
+      }
+      .col-md-4:not(:first-child) {
+        border-left: 1px $borderSolid $whiteOffTwo;
       }
     }
   }
