--- a/src/mycv/scss/stylecv.scss
+++ b/src/mycv/scss/stylecv.scss
@@ -53,7 +53,7 @@ body {
 }
 
 .download-template {
-  visibility: hidden;
+  // visibility: hidden;
   color: $white;
   background-color: $pink;
   border: none;
