--- a/src/mycv/scss/stylecv.scss
+++ b/src/mycv/scss/stylecv.scss
@@ -77,6 +77,11 @@ body {
   .far {
     @include pdficon(5px, $red);
   }
+  &:not(:hover) {
+    i {
+      animation: none;
+    }
+  }
 }
 
 .gradient {
